# fat-label

./: AUTHORS  LICENSE  README.md  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am  bg90_fat_label.desktop.in  lib_bg90_fat_label.c  lib_bg90_fat_label.h
